# library

./: .dockerignore  .env.sample  .flake8  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirenments.txt
.github/workflows/: build.yml
entrypoints/: entrypoint.sh
project/: create_default_db_data.py
project/books/: admin.py  forms.py  models.py  urls.py  views.py
project/books/migrations/: 0001_initial.py
project/books/templates/books/: base.html  books.html  index.html  reader_create.html  reader_detail.html
project/project/: settings.py  urls.py  wsgi.py
project/project/config/: env_config.py
